# shortify-link

./: .gitignore  .railway-service.json  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
config/: settings.py  settings_dev.py  settings_prod.py
links/: admin.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
links/migrations/: 0001_initial.py
links/templates/: base.html
links/templates/links/: create.html  dashboard.html  list.html
